# AI-Powered-Project-Management-SaaS

./: LICENSE  README.md  docker-compose.yml
.github/workflows/: ci-backend.yml  ci-frontend.yml  code-quality.yml  dependency-check.yml  docker-build.yml  pr-automation.yml  security-check.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  auth.py  users.py
backend/app/auth/: __init__.py  dependencies.py  jwt_service.py  token_store.py
backend/app/core/: __init__.py  config.py  lifespan.py
backend/app/db/: __init__.py  mongo.py  redis.py
backend/app/models/: __init__.py  user.py
backend/app/schemas/: __init__.py  auth.py
backend/tests/: conftest.py
backend/tests/api/: test_auth.py
backend/tests/auth/: test_jwt_service.py
frontend/: Dockerfile
